# Botnet_DDOS

./: README.md  master.py  pyproject.toml  sampleCommands  slave.py
utils/: __init__.py  forge.py  socks.py
