[tool.poetry]
name = "botnet_ddos"
version = "0.1.0"
description = ""
authors = ["Wizard <codewizard001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scapy = "^2.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
